--- a/notebooks/mod05_storage_and_databases.ipynb
+++ b/notebooks/mod05_storage_and_databases.ipynb
@@ -88,7 +88,46 @@
     "- Relational databases have been around for decades. These can analyze complex data from various tables through SQL. You have a sales supply chain management system. RDS is best because it's built for business analytics. RDS does joins.\n",
     "- DynamoDB is great for basically anything else? This is great for lookup tables. You have an employee contact list, with all their information. This is a single table. But I still don't understand what you're doing with this table if not joining it to something else? Maybe that's just analytics-brain...\n",
     "\n",
-    "## Redshift\n"
+    "## Redshift\n",
+    "So we've talked about transactional systems, which can be really good about telling us what's happening now, but let's consider the historical data use case.\n",
+    "\n",
+    "Most database systems were designed with OLTP in mind, but as we keep exploding data generation, the querying of the (exponentially growing) data history can become a new challenge. This is where data warehouses come in. Once data is set in stone, historical, unchanging--think about the difference in asking \"what were our sales yesterday\" vs. \"what's left in inventory right now?\"--a data warehouse is likely the best place for it.\n",
+    "\n",
+    "You can run your flavor of dw on AWS, or you can Redshift. We're gonna breeze past it here, but there are whole classes on Redshift.\n",
+    "\n",
+    "## AWS Database Migration Service (DMS)\n",
+    "This is their tool for migrating from where you are to AWS. Your source database remains intact and functional and you can just switch over when it's all done.\n",
+    "\n",
+    "If your source and target database are of the same type, they're considered homogenous databases, and you can move from MySQL to RDS for MySQL, for instance.\n",
+    "\n",
+    "Schemas, data types, and code are all cross compatible.\n",
+    "\n",
+    "Your source can be:\n",
+    "- on prem\n",
+    "- Amazon EC2\n",
+    "- Amazon RDS\n",
+    "\n",
+    "Your target can be\n",
+    "- Amazon EC2\n",
+    "- Amazon RDS\n",
+    "\n",
+    "You start a migration task and hit go, and it does the rest.\n",
+    "\n",
+    "If your sources and targets are different DB types, then they're heterogeneous. This is a 2 step process. Schemas, data types, and code are not necessarily compatible, so we have to convert them using the AWS Schema Conversion Tool.  This handles the schema and code, and then you can do the migration.\n",
+    "\n",
+    "You can also use DMS for:\n",
+    "- development & test database migrations - you can \"clone\" your prod database into a dev env, either once, or even continuously\n",
+    "- database consolidations - self evident\n",
+    "- continuous database replication - for disaster recovery, or just geographic separation\n",
+    "\n",
+    "## Other DB Services\n",
+    "There's no 1 size fits all database for everything, so it's important to know the variety of offerings.\n",
+    "- Amazon DocumentDB - like dynamoDB, it's an unstructured database but is better at documents?\n",
+    "- Amazon Neptune - a graph database for social networking, recommenders, and fraud detection\n",
+    "- Amazon Quantum Ledger Database - good for supply chain tracking and ensuring nothing is lost, or bank transaction records, with complete immutability\n",
+    "- Amazon Managed Blockchain\n",
+    "- Amazon ElastiCache - Caching layers on top of databases\n",
+    "- Amazon DynamoDB Accelerator (DAX)"
    ]
   }
  ],
