--- a/notebooks/mod11_AWS_CPE_exam.ipynb
+++ b/notebooks/mod11_AWS_CPE_exam.ipynb
@@ -29,6 +29,47 @@
     "\n",
     "There are also [sample exam questions](https://d1.awsstatic.com/training-and-certification/docs-cloud-practitioner/AWS-Certified-Cloud-Practitioner_Sample-Questions.pdf)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Assessment\n",
+    "I'm going to make down here how many questions (out of 30) I get correct or incorrect.\n",
+    "\n",
+    "1. g\n",
+    "1. x\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. x\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. x\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. g\n",
+    "1. x\n",
+    "1. g\n",
+    "1. g\n",
+    "\n",
+    "I passed with an 87%, passing is 80%."
+   ]
   }
  ],
  "metadata": {
